@@ -19,7 +19,7 @@ no_index:
 provides:
   App::MojoSlides:
     file: lib/App/MojoSlides.pm
-    version: 0.07
+    version: 0.08
   App::MojoSlides::MoreTagHelpers:
     file: lib/App/MojoSlides/MoreTagHelpers.pm
   App::MojoSlides::Slides:
@@ -31,4 +31,4 @@ resources:
   bugtracker: http://github.com/jberger/App-MojoSlides/issues
   license: http://dev.perl.org/licenses/
   repository: http://github.com/jberger/App-MojoSlides
-version: 0.07
+version: 0.08
