@@ -2,6 +2,7 @@ Revision history for Perl module App::MojoSlides
 
 0.08 2013-11-10
   - fixed ms_overlay bug preventing more than 9 increments
+  - column can now take an array reference of classes
 
 0.07 2013-11-10
   - added finally key for further flexibility
